tests/reference/asr-iachar_arg_len_compiletime-1ecf087.stderr
semantic error: Argument to Iachar must be of length one
 --> tests/errors/iachar_arg_len_compiletime.f90:2:19
  |
2 |    print*, iachar("Hello")
  |                   ^^^^^^^ 
